--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>welcome to my site </h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos, suscipit. Aspernatur adipisci nihil labore fugit expedita, eveniet sunt et minus eaque, officiis cum ullam. Dolor ullam voluptate eius id praesentium.</p>
 </body>
 </html>
