--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos, suscipit. Aspernatur adipisci nihil labore fugit expedita, eveniet sunt et minus eaque, officiis cum ullam. Dolor ullam voluptate eius id praesentium.</p>
 </body>
 <ul>
-    <li>home</li>
+    <li> newhome</li>
     <li>gellery</li>
     <li>aboute me</li>
 </ul>
