--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <li> myhome</li>
     <li>gellery</li>
     <li>aboute me</li>
+    <li>call me</li>
 </ul>
 <footer>copy right 2023</footer>
 </html>
